<resources>
    <string name="app_name">Okami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsun" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_github">Github</string>
    <string name="menu_search">Search</string>
    <string name="posterImageDesc">Poster Image for current Anime or Manga</string>
    <string name="errorText">Error Loading data…</string>
    <string name="home_fragment_title">Home</string>
    <string name="explore_fragment_title">Explore</string>
    <string name="quick_update_fragment_title">Quick Update</string>
    <string name="notifications_fragment_title">Notifications</string>

    <string name="long_text">The Paging library tracks the state of load requests for paged data and exposes it through the LoadState class. Your app can register a listener with the PagingDataAdapter to receive information about the current state and update the UI accordingly. These states are provided from the adapter because they are synchronous with the UI. This means that your listener receives updates when the page load has been applied to the UI. \n To get the loading state for general use in your UI, use the loadStateFlow stream or the addLoadStateListener() method provided by your PagingDataAdapter. These mechanisms provide access to a CombinedLoadStates object that includes information about the LoadState behavior for each load type.</string>
</resources>