<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.yohannes.dev.app.okami.fragments.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.yohannes.dev.app.okami.fragments.ExploreFragment"
        android:label="@string/explore_fragment_title"
        tools:layout="@layout/fragment_explore" />
    <fragment
        android:id="@+id/quickUpdateFragment"
        android:name="com.yohannes.dev.app.okami.fragments.QuickUpdateFragment"
        android:label="@string/quick_update_fragment_title"
        tools:layout="@layout/fragment_quick_update" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.yohannes.dev.app.okami.fragments.NotificationFragment"
        android:label="@string/notifications_fragment_title"
        tools:layout="@layout/fragment_notification" />
</navigation>