<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings_menu"
        android:orderInCategory="100"
        android:icon="@drawable/ic_light_theme"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/github_menu"
        android:orderInCategory="100"
        android:icon="@drawable/ic_change_layout"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/menu_github" />


    <item
        android:id="@+id/search_button"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/menu_search" />
</menu>